added support for TW, split off stream from inside of node object

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,7 +54,8 @@ catkin_package(
     INCLUDE_DIRS include
     CATKIN_DEPENDS std_msgs geometry_msgs message_runtime gbx_ros_bridge_msgs)
 
-add_executable(gpsImu_node src/main.cpp src/estimationNode.cpp src/gpsCallbacks.cpp src/filterImu.cpp src/mathHelperFunctions.cpp src/gbxStreamEndpointGPSKF.hpp)
+add_executable(gpsImu_node src/main.cpp src/estimationNode.cpp src/gpsCallbacks.cpp src/filterImu.cpp
+    src/filterTW.cpp src/mathHelperFunctions.cpp src/gbxStreamEndpointGPSKF.cpp)
 
 target_link_libraries(gpskf_gbx 
   SharedPpEngine
