online ros mode in testing

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,8 @@ catkin_package(
     CATKIN_DEPENDS std_msgs geometry_msgs gbx_ros_bridge_msgs)
 
 add_executable(gpsImu_node src/main.cpp src/estimationNode.cpp src/gpsCallbacks.cpp src/filterImu.cpp
-    src/filterTW.cpp src/mathHelperFunctions.cpp src/gbxStreamEndpointGPSKF.cpp src/rosPlayback.cpp)
+    src/filterTW.cpp src/mathHelperFunctions.cpp src/gbxStreamEndpointGPSKF.cpp src/rosPlayback.cpp
+    src/rosStreamEndpointGPSKF.cpp)
 
 target_link_libraries(gpsImu_node 
   SharedPpEngine
