vicon callback updates

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -73,7 +73,7 @@ catkin_package(
 
 add_executable(gpsImu_node src/main.cpp src/estimationNode.cpp src/gpsCallbacks.cpp src/filterImu.cpp
     src/filterTW.cpp src/mathHelperFunctions.cpp src/gbxStreamEndpointGPSKF.cpp src/rosPlayback.cpp
-    src/rosStreamEndpointGPSKF.cpp)
+    src/rosStreamEndpointGPSKF.cpp src/viconStream.cpp)
 
 target_link_libraries(gpsImu_node 
   SharedPpEngine
